--- a/artifacts/rbac-cluster.yaml
+++ b/artifacts/rbac-cluster.yaml
@@ -12,12 +12,12 @@ rules:
 - apiGroups: ["flowcontrol.apiserver.k8s.io"]
   resources: ["flowschemas", "prioritylevelconfigurations"]
   verbs: ["get", "watch", "list"]
-- apiGroups: ["config.example.com"]
+- apiGroups: ["config.sdcio.dev"]
   resources: ["configs", "configs/status"]
   verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
-- apiGroups: ["inv.nephio.org"]
+- apiGroups: ["inv.sdcio.dev"]
   resources: ["targets", "targets/status"]
   verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
-- apiGroups: ["inv.nephio.org"]
+- apiGroups: ["inv.sdcio.dev"]
   resources: ["targetconnectionprofiles", "targetsyncprofiles"]
   verbs: ["get", "watch", "list"]
