--- a/artifacts/apiservice.yaml
+++ b/artifacts/apiservice.yaml
@@ -1,10 +1,10 @@
 apiVersion: apiregistration.k8s.io/v1
 kind: APIService
 metadata:
-  name: v1alpha1.config.example.com
+  name: v1alpha1.config.sdcio.dev
 spec:
   insecureSkipTLSVerify: true
-  group: config.example.com
+  group: config.sdcio.dev
   groupPriorityMinimum: 1000
   versionPriority: 15
   service:
