--- a/artifacts/inv.sdcio.dev_targets.yaml
+++ b/artifacts/inv.sdcio.dev_targets.yaml
@@ -4,12 +4,12 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.12.1
-  name: targets.inv.nephio.org
+  name: targets.inv.sdcio.dev
 spec:
-  group: inv.nephio.org
+  group: inv.sdcio.dev
   names:
     categories:
-    - nephio
+    - sdc
     - inv
     kind: Target
     listKind: TargetList
