--- a/artifacts/inv.sdcio.dev_discoveryrules.yaml
+++ b/artifacts/inv.sdcio.dev_discoveryrules.yaml
@@ -46,45 +46,6 @@ spec:
                 description: number of concurrent IP scan
                 format: int64
                 type: integer
-              connectivityProfile:
-                description: ConnectivityProfile define the profile the discovery
-                  controller uses to connect to targets once discovered
-                properties:
-                  connectionProfile:
-                    description: ConnectionProfile define the profile used to connect
-                      to the target once discovered
-                    type: string
-                  defaultSchema:
-                    description: DefaultSchema define the default schema used to connect
-                      to a target Used typically without discovery
-                    properties:
-                      provider:
-                        description: Provider specifies the provider of the schema.
-                        type: string
-                      version:
-                        description: Version defines the version of the schema
-                        type: string
-                    required:
-                    - provider
-                    - version
-                    type: object
-                  secret:
-                    description: Secret defines the name of the secret to connect
-                      to the target
-                    type: string
-                  syncProfile:
-                    description: SyncProfile define the profile used to sync to the
-                      target config once discovered
-                    type: string
-                  tlsSecret:
-                    description: TLSSecret defines the name of the TLS secret to connect
-                      to the target
-                    type: string
-                required:
-                - connectionProfile
-                - secret
-                - syncProfile
-                type: object
               discover:
                 description: Discovery rule defines the profiles and templates generic
                   to any discovery rule class/type Discover defines if discovery is
@@ -102,15 +63,17 @@ spec:
                     items:
                       type: string
                     type: array
-                  secret:
+                  credentials:
+                    description: Credentials defines the name of the secret that holds
+                      the credentials to connect to the target
                     type: string
                   tlsSecret:
                     description: TLSSecret defines the name of the TLS secret to connect
-                      to the target
+                      to the target if mtls is used
                     type: string
                 required:
                 - connectionProfiles
-                - secret
+                - credentials
                 type: object
               kind:
                 default: ip
@@ -191,6 +154,47 @@ spec:
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
+              targetConnectionProfiles:
+                description: TargetConnectionProfiles define the profile the discovery
+                  controller uses to create targets once discovered
+                items:
+                  properties:
+                    connectionProfile:
+                      description: ConnectionProfile define the profile used to connect
+                        to the target once discovered
+                      type: string
+                    credentials:
+                      description: Credentials defines the name of the secret that
+                        holds the credentials to connect to the target
+                      type: string
+                    defaultSchema:
+                      description: DefaultSchema define the default schema used to
+                        connect to a target Used when discovery is disabled or when
+                        discovery is unsuccessful.
+                      properties:
+                        provider:
+                          description: Provider specifies the provider of the schema.
+                          type: string
+                        version:
+                          description: Version defines the version of the schema
+                          type: string
+                      required:
+                      - provider
+                      - version
+                      type: object
+                    syncProfile:
+                      description: SyncProfile define the profile used to sync to
+                        the target config once discovered
+                      type: string
+                    tlsSecret:
+                      description: TLSSecret defines the name of the TLS secret to
+                        connect to the target if mtls is used
+                      type: string
+                  required:
+                  - connectionProfile
+                  - credentials
+                  type: object
+                type: array
               targetTemplate:
                 description: TargetTemplate defines the template the discovery controller
                   uses to create the targets as a result of the discovery
@@ -215,10 +219,10 @@ spec:
                       rule: self == oldSelf
                 type: object
             required:
-            - connectivityProfile
             - discover
             - kind
             - period
+            - targetConnectionProfiles
             type: object
           status:
             description: DiscoveryRuleStatus defines the observed state of DiscoveryRule
