--- a/artifacts/inv.sdcio.dev_targetconnectionprofiles.yaml
+++ b/artifacts/inv.sdcio.dev_targetconnectionprofiles.yaml
@@ -39,6 +39,15 @@ spec:
             description: TargetConnectionProfileSpec defines the desired state of
               TargetConnectionProfile
             properties:
+              connectRetry:
+                description: A Duration represents the elapsed time between two instants
+                  as an int64 nanosecond count. The representation limits the largest
+                  representable duration to approximately 290 years.
+                format: int64
+                type: integer
+                x-kubernetes-validations:
+                - message: connectRetry is immutable
+                  rule: self == oldSelf
               encoding:
                 default: ASCII
                 enum:
@@ -78,6 +87,15 @@ spec:
                 x-kubernetes-validations:
                 - message: port is immutable
                   rule: self == oldSelf
+              preferredNetconfVersion:
+                default: "1.0"
+                enum:
+                - "1.0"
+                - "1.1"
+                type: string
+                x-kubernetes-validations:
+                - message: preferredNetconfVersion is immutable
+                  rule: self == oldSelf
               protocol:
                 default: gnmi
                 enum:
@@ -95,6 +113,15 @@ spec:
                 x-kubernetes-validations:
                 - message: skipVerify is immutable
                   rule: self == oldSelf
+              timeout:
+                description: A Duration represents the elapsed time between two instants
+                  as an int64 nanosecond count. The representation limits the largest
+                  representable duration to approximately 290 years.
+                format: int64
+                type: integer
+                x-kubernetes-validations:
+                - message: timeout is immutable
+                  rule: self == oldSelf
               useOperationRemove:
                 default: false
                 type: boolean
@@ -102,9 +129,12 @@ spec:
                 - message: UseOperationRemove is immutable
                   rule: self == oldSelf
             required:
+            - connectRetry
             - encoding
             - port
+            - preferredNetconfVersion
             - protocol
+            - timeout
             type: object
         type: object
     served: true
