updated discovery logic

--- a/artifacts/inv.sdcio.dev_targetsyncprofiles.yaml
+++ b/artifacts/inv.sdcio.dev_targetsyncprofiles.yaml
@@ -61,9 +61,8 @@ spec:
                       - config
                       type: string
                     interval:
-                      default: 0
-                      format: int64
-                      type: integer
+                      default: 60s
+                      type: string
                     mode:
                       enum:
                       - unknown
