--- a/artifacts/inv.sdcio.dev_discoveryrules.yaml
+++ b/artifacts/inv.sdcio.dev_discoveryrules.yaml
@@ -41,16 +41,41 @@ spec:
           spec:
             description: DiscoveryRuleSpec defines the desired state of DiscoveryRule
             properties:
+              addresses:
+                description: IP Prefixes for which this discovery rule applies
+                items:
+                  properties:
+                    address:
+                      description: Address (specified as IP or DNS name) of the target/target(s)
+                      type: string
+                    hostName:
+                      description: HostName of the ip prefix; used for /32 or /128
+                        addresses with discovery disabled
+                      type: string
+                  required:
+                  - address
+                  type: object
+                type: array
               concurrentScans:
                 default: 10
                 description: number of concurrent IP scan
                 format: int64
                 type: integer
-              discover:
-                description: Discovery rule defines the profiles and templates generic
-                  to any discovery rule class/type Discover defines if discovery is
-                  enabled or not
-                type: boolean
+              defaultSchema:
+                description: DefaultSchema define the default schema used to connect
+                  to a target Indicates that discovery is disable; cannot be used
+                  for prefix based discovery rules
+                properties:
+                  provider:
+                    description: Provider specifies the provider of the schema.
+                    type: string
+                  version:
+                    description: Version defines the version of the schema
+                    type: string
+                required:
+                - provider
+                - version
+                type: object
               discoveryProfile:
                 description: DiscoveryProfile define the profiles the discovery controller
                   uses to discover targets
@@ -75,19 +100,57 @@ spec:
                 - connectionProfiles
                 - credentials
                 type: object
-              kind:
-                default: ip
-                enum:
-                - unknown
-                - ip
-                - pod
-                - svc
-                type: string
               period:
                 default: 1m
                 description: Period defines the wait period between discovery rule
                   runs
                 type: string
+              podSelector:
+                description: PodSelector defines the pod selector for which this discovery
+                  rule applies
+                properties:
+                  matchExpressions:
+                    description: matchExpressions is a list of label selector requirements.
+                      The requirements are ANDed.
+                    items:
+                      description: A label selector requirement is a selector that
+                        contains values, a key, and an operator that relates the key
+                        and values.
+                      properties:
+                        key:
+                          description: key is the label key that the selector applies
+                            to.
+                          type: string
+                        operator:
+                          description: operator represents a key's relationship to
+                            a set of values. Valid operators are In, NotIn, Exists
+                            and DoesNotExist.
+                          type: string
+                        values:
+                          description: values is an array of string values. If the
+                            operator is In or NotIn, the values array must be non-empty.
+                            If the operator is Exists or DoesNotExist, the values
+                            array must be empty. This array is replaced during a strategic
+                            merge patch.
+                          items:
+                            type: string
+                          type: array
+                      required:
+                      - key
+                      - operator
+                      type: object
+                    type: array
+                  matchLabels:
+                    additionalProperties:
+                      type: string
+                    description: matchLabels is a map of {key,value} pairs. A single
+                      {key,value} in the matchLabels map is equivalent to an element
+                      of matchExpressions, whose key field is "key", the operator
+                      is "In", and the values array contains only "value". The requirements
+                      are ANDed.
+                    type: object
+                type: object
+                x-kubernetes-map-type: atomic
               prefixes:
                 description: IP Prefixes for which this discovery rule applies
                 items:
@@ -97,10 +160,6 @@ spec:
                       items:
                         type: string
                       type: array
-                    hostName:
-                      description: HostName of the ip prefix; used for /32 or /128
-                        addresses with discovery disabled
-                      type: string
                     prefix:
                       description: Prefix of the target/target(s)
                       type: string
@@ -108,9 +167,9 @@ spec:
                   - prefix
                   type: object
                 type: array
-              selector:
-                description: Selector defines the selector used to select which POD/SVC
-                  are subject to this discovery rule
+              serviceSelector:
+                description: ServiceSelector defines the service selector for which
+                  this discovery rule applies
                 properties:
                   matchExpressions:
                     description: matchExpressions is a list of label selector requirements.
@@ -167,21 +226,6 @@ spec:
                       description: Credentials defines the name of the secret that
                         holds the credentials to connect to the target
                       type: string
-                    defaultSchema:
-                      description: DefaultSchema define the default schema used to
-                        connect to a target Used when discovery is disabled or when
-                        discovery is unsuccessful.
-                      properties:
-                        provider:
-                          description: Provider specifies the provider of the schema.
-                          type: string
-                        version:
-                          description: Version defines the version of the schema
-                          type: string
-                      required:
-                      - provider
-                      - version
-                      type: object
                     syncProfile:
                       description: SyncProfile define the profile used to sync to
                         the target config once discovered
@@ -219,8 +263,6 @@ spec:
                       rule: self == oldSelf
                 type: object
             required:
-            - discover
-            - kind
             - period
             - targetConnectionProfiles
             type: object
