--- a/artifacts/inv.sdcio.dev_targetconnectionprofiles.yaml
+++ b/artifacts/inv.sdcio.dev_targetconnectionprofiles.yaml
@@ -40,12 +40,8 @@ spec:
               TargetConnectionProfile
             properties:
               connectRetry:
-                default: 0
-                description: A Duration represents the elapsed time between two instants
-                  as an int64 nanosecond count. The representation limits the largest
-                  representable duration to approximately 290 years.
-                format: int64
-                type: integer
+                default: 10s
+                type: string
                 x-kubernetes-validations:
                 - message: connectRetry is immutable
                   rule: self == oldSelf
@@ -115,12 +111,8 @@ spec:
                 - message: skipVerify is immutable
                   rule: self == oldSelf
               timeout:
-                default: 10
-                description: A Duration represents the elapsed time between two instants
-                  as an int64 nanosecond count. The representation limits the largest
-                  representable duration to approximately 290 years.
-                format: int64
-                type: integer
+                default: 10s
+                type: string
                 x-kubernetes-validations:
                 - message: timeout is immutable
                   rule: self == oldSelf
