--- a/artifacts/deployment.yaml
+++ b/artifacts/deployment.yaml
@@ -1,27 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: config-apiserver
+  name: config-server
   namespace: network-system
   labels:
-    config-apiserver: "true"
+    config-server: "true"
 spec:
   replicas: 1
   selector:
     matchLabels:
-      config-apiserver: "true"
+      config-server: "true"
   template:
     metadata:
       labels:
-        config-apiserver: "true"
+        config-server: "true"
     spec:
-      serviceAccountName: config-apiserver
+      serviceAccountName: config-server
       containers:
-      - name: capis
-        image: europe-docker.pkg.dev/srlinux/eu.gcr.io/capis:latest
+      - name: config-server
+        image: $input.context.
+        #image: europe-docker.pkg.dev/srlinux/eu.gcr.io/config-server:latest
         imagePullPolicy: Always
         command:
-        - /capis
+        - /app/config-server
         args:
         - "--tls-cert-file=/apiserver.local.config/certificates/tls.crt"
         - "--tls-private-key-file=/apiserver.local.config/certificates/tls.key"
@@ -31,45 +32,66 @@ spec:
         - "--audit-log-maxbackup=0"
         - "--secure-port=6443"
         env:
+        - name: POD_IP
+          valueFrom:
+            fieldRef:
+              fieldPath: status.podIP
         - name: POD_NAMESPACE
           valueFrom:
             fieldRef:
               apiVersion: v1
               fieldPath: metadata.namespace
-        - name: POD_IP
-          valueFrom:
-            fieldRef:
-              apiVersion: v1
-              fieldPath: status.podIP
-        - name: POD_NAME
-          valueFrom:
-            fieldRef:
-              apiVersion: v1
-              fieldPath: metadata.name
-        - name: NODE_NAME
+        - name: "NODE_NAME"
           valueFrom:
             fieldRef:
               apiVersion: v1
               fieldPath: spec.nodeName
-        - name: NODE_IP
+        - name: "NODE_IP"
           valueFrom:
             fieldRef:
               apiVersion: v1
               fieldPath: status.hostIP
         - name: ENABLE_TARGET
           value: "true"
-        resources:
-          requests:
-            cpu: 200m
-            memory: 200Mi
-          limits:
-            cpu: 200m
-            memory: 300Mi
+        - name: ENABLE_DISCOVERYRULE
+          value: "true"
+        - name: ENABLE_SCHEMA
+          value: "true"
         volumeMounts:
         - name: apiserver-certs
           mountPath: /apiserver.local.config/certificates
           readOnly: true
+        - name: config-store
+          mountPath: /config
+        - name: schema-store
+          mountPath: /schemas
+      - name: data-server
+        image: europe-docker.pkg.dev/srlinux/eu.gcr.io/data-server:latest
+        imagePullPolicy: Always
+        command:
+        - /app/data-server
+        args:
+        - "--config=/config/data-server.yaml"
+        volumeMounts:
+        - name: dataserver-config
+          mountPath: /config
+        - name: cache
+          mountPath: /cached/caches
+        - name: schema-store
+          mountPath: /schemas
       volumes:
+      - name: dataserver-config
+        configMap:
+          name: dataserver
       - name: apiserver-certs
         secret:
-          secretName: capis
+          secretName: config-server
+      - name: cache
+        emptyDir:
+          sizeLimit: 10Gi
+      - name: config-store
+        persistentVolumeClaim:
+          claimName: pvc-config-store
+      - name: schema-store
+        persistentVolumeClaim:
+          claimName: pvc-schema-store
