--- a/artifacts/rbac-role.yaml
+++ b/artifacts/rbac-role.yaml
@@ -4,16 +4,9 @@ metadata:
   name: aggregated-apiserver-role
   namespace: network-system
 rules:
-  # Needed for workload identity
-  - apiGroups:
-      - ""
-    resources:
-      - serviceaccounts
-    verbs:
-      - get
-  - apiGroups:
-      - ""
-    resources:
-      - serviceaccounts/token
-    verbs:
-      - create
+  - apiGroups: [""]
+    resources: ["serviceaccounts"]
+    verbs: ["get"]
+  - apiGroups: [""]
+    resources: ["serviceaccounts/token"]
+    verbs: ["create"]
