--- a/artifacts/apiservice.yaml
+++ b/artifacts/apiservice.yaml
@@ -8,7 +8,7 @@ spec:
   groupPriorityMinimum: 1000
   versionPriority: 15
   service:
-    name: capis
+    name: config-server
     namespace: network-system
     port: 6443
   version: v1alpha1
