--- a/artifacts/rbac-cluster-role-binding-auth-delegator.yaml
+++ b/artifacts/rbac-cluster-role-binding-auth-delegator.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: config-apiserver-clusterrolebinding
+  name: config:system:auth-delegator
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: config-apiserver-clusterrole
+  name: system:auth-delegator
 subjects:
 - kind: ServiceAccount
-  name: config-apiserver
+  name: config-server
   namespace: network-system
