--- a/artifacts/rbac-cluster-role-binding-controller-permissions.yaml
+++ b/artifacts/rbac-cluster-role-binding-controller-permissions.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: config:system:auth-delegator
+  name: config-server-clusterrolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: system:auth-delegator
+  name: config-server-clusterrole
 subjects:
 - kind: ServiceAccount
-  name: config-apiserver
+  name: config-server
   namespace: network-system
