--- a/artifacts/rbac-cluster-role-controller-permissions.yaml
+++ b/artifacts/rbac-cluster-role-controller-permissions.yaml
@@ -1,10 +1,10 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: config-apiserver-clusterrole
+  name: config-server-clusterrole
 rules:
 - apiGroups: [""]
-  resources: ["namespaces", secrets]
+  resources: ["namespaces", "secrets"]
   verbs: ["get", "watch", "list"]
 - apiGroups: ["admissionregistration.k8s.io"]
   resources: ["mutatingwebhookconfigurations", "validatingwebhookconfigurations"]
@@ -21,3 +21,9 @@ rules:
 - apiGroups: ["inv.sdcio.dev"]
   resources: ["targetconnectionprofiles", "targetsyncprofiles"]
   verbs: ["get", "watch", "list"]
+- apiGroups: ["inv.sdcio.dev"]
+  resources: ["discoveryrules", "discoveryrules/status"]
+  verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
+- apiGroups: ["inv.sdcio.dev"]
+  resources: ["schemas", "schemas/status"]
+  verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
