--- a/artifacts/rbac-role-binding.yaml
+++ b/artifacts/rbac-role-binding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: config-apiserver-clusterrolebinding
+  name: config-server-clusterrolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: config-apiserver-clusterrole
+  name: config-server-clusterrole
 subjects:
 - kind: ServiceAccount
-  name: config-apiserver
+  name: config-server
   namespace: network-system
