--- a/.goreleaser.nightlies.yml
+++ b/.goreleaser.nightlies.yml
@@ -19,6 +19,12 @@ dockers:
       - "ghcr.io/iptecharch/config-server:v0.0.0-dev-latest"
     dockerfile: goreleaser.dockerfile
     skip_push: false
+    build_flag_templates:
+      - "--pull"
+      - "--label=org.opencontainers.image.created={{.Date}}"
+      - "--label=org.opencontainers.image.title={{.ProjectName}}"
+      - "--label=org.opencontainers.image.source=https://github.com/iptecharch/{{.ProjectName}}"
+      - "--label=org.opencontainers.image.version=v{{.Version}}"
   - goos: linux
     goarch: amd64
     ids:
@@ -30,5 +36,11 @@ dockers:
     skip_push: false
     push_flags:
       - --tls-verify=false
+    build_flag_templates:
+      - "--pull"
+      - "--label=org.opencontainers.image.created={{.Date}}"
+      - "--label=org.opencontainers.image.title={{.ProjectName}}"
+      - "--label=org.opencontainers.image.source=https://github.com/iptecharch/{{.ProjectName}}"
+      - "--label=org.opencontainers.image.version=v{{.Version}}"
 release:
   disable: true
