added target status watcher

--- a/example/config/config.yaml
+++ b/example/config/config.yaml
@@ -8,8 +8,8 @@ metadata:
   name: test
   namespace: default
   labels:
-    targetName: dev1
-    targetNamespace: default
+    config.sdcio.dev/targetName: dev1
+    config.sdcio.dev/targetNamespace: default
 spec:
   priority: 10
   config:
