--- a/artifacts/deployment.yaml
+++ b/artifacts/deployment.yaml
@@ -80,6 +80,8 @@ spec:
           mountPath: /cached/caches
         - name: schema-store
           mountPath: /schemas
+        - name: schema-db
+          mountPath: /schemadb
       volumes:
       - name: data-server-config
         configMap:
@@ -93,6 +95,9 @@ spec:
       - name: config-store
         persistentVolumeClaim:
           claimName: pvc-config-store
-      - name: schema-store
+      - name: schema-store # yang file from git
         persistentVolumeClaim:
           claimName: pvc-schema-store
+      - name: schema-db # persistent schema obj from the parsed yang files
+        persistentVolumeClaim:
+          claimName: pvc-schema-db
