--- a/artifacts/in/configmap-input-vars.yaml
+++ b/artifacts/in/configmap-input-vars.yaml
@@ -4,4 +4,4 @@ metadata:
   name: context
 data: 
   dataServerImage: "europe-docker.pkg.dev/srlinux/eu.gcr.io/data-server:latest"
-  configServerImage: "europe-docker.pkg.dev/srlinux/eu.gcr.io/config-server:latest"
+  configServerImage: "registry.kmrd.dev/iptecharch/data-server:latest"
